--- a/pom.xml
+++ b/pom.xml
@@ -117,7 +117,11 @@
 			<version>2.3.0.RELEASE</version>
 			<scope>test</scope>
 		</dependency>
-		<!---->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot</artifactId>
+        </dependency>
+        <!---->
 
 	</dependencies>
 
